--- a/index.html
+++ b/index.html
@@ -1,34 +1,115 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-	<head> 
-		<title>Ahmed Altaher - Profile</title>
-	</head> 
-	<body>
-		<img src="images/20200220_122506.jpg" alt="Ahmed Altaher" width="200" height="250" >
-		<h1 class="tm-title bold shadow">Ahmed Altaher</h1> 
-	 
-	
-		<h3>
-		<strong>Assignments: </strong>
-		</h3>
+<head>
+    <meta charset="utf-8">
+    <title>Ahmed Altaher - Profile</title>
 
 
-		<ul>
-			<li>Assignment# 1 : Create a home page.</li>
-		
-		</ul>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/templatemo-blue.css">
+</head>
+<body data-spy="scroll" data-target=".navbar-collapse">
 
-		<footer>
-			<hr/>
-			<a href="https://validator.w3.org/check/referer"> <img
-					src="images/w3c-html.png"
-					alt="html validator"/></a>
-			<a href=" http://jigsaw.w3.org/css-validator/check/referer">
-					<img src="images/w3c-css.png" alt="css validator"></a>
+    <div class="preloader">
+        <div class="sk-spinner sk-spinner-wordpress">
+            <span class="sk-inner-circle"></span>
+        </div>
+    </div>
 
-		</footer>
-	
-	
-	</body>
-	
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <img src="images/20200220_122506.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+                    <hr>
+                    <h1 class="tm-title bold shadow">Ahmed Altaher</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="container">
+
+
+        <div class="row">
+            <div class="col-md-8 col-sm-12">
+                <div class="education">
+                    <h2 class="white">CS472 Web Application Programming</h2>
+                    <div class="education-content">
+                        <p>This course provides a systematic introduction to programming interactive and dynamic web applications. The course is intended for individuals with little or no prior web application programming experience. This offering will use Java servlets and JSP for server side processing. The course will introduce HTML and CSS. JavaScript is a focus of the course, and is covered as a functional programming language including jQuery, Ajax, and JavaScript namespaces and modules. It is a prerequisite for the CS572 Modern Web Applications Programming which covers NodeJs, ExpressJS, MongoDB, AngularJS2 and TypeScript. It's also a prerequisite for CS545 Web Application Architecture particularly the JSP/Servlets. The course includes programming assignments and a project at the end. </p>
+
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <section class="container">
+
+        <div class="row">
+
+            <div class="col-md-6 col-sm-12">
+                <div class="about">
+                    <h2 class="white">Assignments</h2>
+                    <div class="about-content">
+                        <ul>
+                            <li>Lesson 1: HTML and CSS (Week 1)</li>
+                            <a href="aboutme.html"> <li>Lesson 2: Basic CSS Styling (Week 1)</li></a>
+                            <a href="#"> <li>Lesson 3: CSS Practice (Week 2)</li></a>
+                            <a href="#"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
+                            <a href="#"><li>Lesson 4: CSS for Page Layout (Week 2)</li></a>
+                            <a href="#"><li>Lesson 5: Basic JavaScript (Week 3)</li></a>
+                            <a href="#"><li>Lesson 6: Scope, closures and encapsulation</li></a>
+                            <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
+                        </ul>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <ul class="social-icons">
+                        <li><a href="https://www.facebook.com/AhmadNoorcs/" class="fa fa-facebook"></a></li>
+                        <li><a href="https://twitter.com/ahmednourcs" class="fa fa-twitter"></a></li>
+                        <li><a href="https://github.com/Ahmad-Noor" class="fa fa-github"></a></li>
+                        <li><a href="https://www.linkedin.com/in/ahmadn0/" class="fa fa-linkedin"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+
+        <hr />
+        <a href="https://validator.w3.org/check/referer">
+            <img src="images/w3c-html.png"
+                 alt="html validator" />
+        </a>
+        <a href=" http://jigsaw.w3.org/css-validator/check/referer">
+            <img src="images/w3c-css.png" alt="css validator">
+        </a>
+
+
+
+    </footer>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.backstretch.min.js"></script>
+    <script src="js/custom.js"></script>
+
+</body>
 </html>
