--- a/Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html
+++ b/Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html
@@ -22,7 +22,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<img src="images/20200220_122506.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<img src="../images/20200220_122506.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
 				<h1 class="tm-title bold shadow">Hi, I am Ahmed</h1>
 				<h1 class="white bold shadow">Senior Software Developer</h1>
@@ -193,10 +193,10 @@
 			</div>
 		</div><hr/>
 			<a href="https://validator.w3.org/check/referer"> <img
-					src="images/w3c-html.png"
+					src="../images/w3c-html.png"
 					alt="html validator"/></a>
 			<a href=" http://jigsaw.w3.org/css-validator/check/referer">
-					<img src="images/w3c-css.png" alt="css validator"></a>
+					<img src="../images/w3c-css.png" alt="css validator"></a>
 		 			
 	
 	</div>
