--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="about-content">
                         <ul>
                             <li>Lesson 1: HTML and CSS (Week 1)</li>
-                            <a href="Lesson%202%20Basic%20CSS%20Styling%20(Week%201)/Aboutme.html"> <li>Lesson 2: Basic CSS Styling (Week 1)</li></a>
+                            <a href="aboutme.html"> <li>Lesson 2: Basic CSS Styling (Week 1)</li></a>
                             <a href="#"> <li>Lesson 3: CSS Practice (Week 2)</li></a>
                             <a href="#"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
                             <a href="#"><li>Lesson 4: CSS for Page Layout (Week 2)</li></a>
