--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="about-content">
                         <ul>
                             <li>Lesson 1: HTML and CSS (Week 1)</li>
-                             <li>Lesson 2: Basic CSS Styling (Week 1) </li>    <a href="Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html">Lab 02  </a>  <a href="Lesson 2 Basic CSS Styling (Week 1)/Recipe.html">Recipes homework  </a>
+                             <li>Lesson 2: Basic CSS Styling (Week 1) </li>    <a href="/Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html">Lab 02  </a>  <a href="Lesson 2 Basic CSS Styling (Week 1)/Recipe.html">Recipes homework  </a>
                             <a href="#"> <li>Lesson 3: CSS Practice (Week 2)</li></a>
                             <a href="#"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
                             <a href="#"><li>Lesson 4: CSS for Page Layout (Week 2)</li></a>
