--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                              <li><div>Lesson 2: Basic CSS Styling (<a href="/Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html">Lab 02</a> , <a href="https://ahmad-noor.github.io/Lesson 2 Basic CSS Styling (Week 1)/Recipe.html">Recipes</a>)</div></li>
                             <a href="#"> <li>Lesson 3: CSS Practice (Week 2)</li></a>
                             <a href=" https://ahmad-noor.github.io/Lesson 3b CSS Layout--Movie Review"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
-                            <li><div>Lesson 4: CSS for Page Layout (Week 2)(<a href="/Lesson 4 CSS for Page Layout/flex">Flex</a> , <a href="/Lesson 4 CSS for Page Layout/grid">Bootstrap</a>)</div></li>
+                            <li><div>Lesson 4: CSS for Page Layout (Week 2)(<a href="/Lesson 4 CSS for Page Layout/flex">Flex</a> , <a href="/Lesson 4 CSS for Page Layout/Bootstrap">Bootstrap</a>)</div></li>
                             <a href="#"><li>Lesson 5: Basic JavaScript (Week 3)</li></a>
                             <a href="#"><li>Lesson 6: Scope, closures and encapsulation</li></a>
                             <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
