--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <a href=" https://ahmad-noor.github.io/Lesson 3b CSS Layout--Movie Review"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
                             <li><div>Lesson 4: CSS for Page Layout (Week 2)(<a href="/Lesson 4 CSS for Page Layout/flex">Flex</a> , <a href="/Lesson 4 CSS for Page Layout/Bootstrap">Bootstrap</a>)</div></li>
                             <a href="/Lesson 5 Basic JavaScript (Week 3)"><li>Lesson 5: Basic JavaScript (Week 3)</li></a>
-                            <a href="/Lesson 6 Scope, closures and encapsulation"><li>Lesson 6: Scope, closures and encapsulation</li></a>
+                            <a href="/Lesson 6 Scope, closures and encapsulation/"><li>Lesson 6: Scope, closures and encapsulation</li></a>
                             <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
                         </ul>
 
