--- a/Lesson 5 Basic JavaScript (Week 3)/index.html
+++ b/Lesson 5 Basic JavaScript (Week 3)/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Basic JavaScript (Week 3)</title>
@@ -17,152 +17,70 @@
         // chai has a lot of stuff, let's make assert global
         let assert = chai.assert;
     </script>
+
+    <script src="index.js"></script>
+
+
     <script>
 
-/* runs test to see if expected argument is === to value returned by function2test argument */
-function myFunctionTest(expected, found) {
-  context("Expected: "+expected+" Found: "+found, function() {
-        it("the result is: "+found, function() {
-            assert.equal(expected, found);
-        });
-    });
-}
+        console.log("My Filter Function: " + myFunctionTest(filter([5, 1, 3, 2, 6], num => num % 2 === 0), JSON.stringify([2, 6])));
 
-/* max returns the maximum of 2 arguments */
-function max(a, b) {
-  if (a > b) {
-    return a;
-  } else {
-    return b;
-  };
-}
+        console.log("My Filter Function: " + myFunctionTest(map([2, 4, 5], num => num * 2), JSON.stringify([4, 8, 10])));
 
-/* max3 takes 3 numbers as arguments and returns the largest */
-function maxOfThree(a, b, c) {
-  return max(max(a, b), c);
+        console.log("My Filter Function: " + myFunctionTest(filter([5, 1, 3, 2, 6], num => num % 2 === 0), JSON.stringify([2, 1])));
 
-}
-/* takes one char and returns true or false whether this char is vowel*/
-function isVowel(c) {
-    return ['a', 'e', 'i', 'o', 'u'].indexOf(c.toLowerCase()) !== -1;
-}
+        console.log("My Filter Function: " + myFunctionTest(map([2, 4, 5], num => num * 2), JSON.stringify([4, 8, 8])));
 
-/* takes one array and it returns the whole sum of it*/
-function sum(arr) {
-    return arr.reduce((a,b)=>a+b);
-}
+        console.log("Expected output of max(20,10) is 20  " + myFunctionTest(20, max(20, 10)));
 
-/* takes one array and it returns the whole product of it*/
-function multiply(arr) {
-    return arr.reduce((a,b)=>a*b);
-}
+        console.log("Expected output of maxOfThree(5,4,44) is 44  " + myFunctionTest(44, maxOfThree(5, 4, 44)));
 
-/* takes one string and it reverses it*/
-function reverse(str) {
-    return ((str.split("")).reverse()).join("");
-}
+        console.log("Expected output of maxOfThree(55,4,44) is 55  " + myFunctionTest(55, maxOfThree(55, 4, 44)));
 
-/* takes one array of strings and returns the longest string word inside*/
-function findLongestWord(arr) {
-    return arr.reduce((a,b)=>a.length>b.length ? a.length : b.length);
-}
+        console.log("Expected output of maxOfThree(55,4,44) is 55  " + myFunctionTest(4, maxOfThree(55, 4, 44)));
 
-/* takes i and an array of filters with all the elememts length that are longer than i*/
-function filterLongWords(arr, i) {
-    return JSON.stringify(arr.filter((str)=>str.length > i));
-}
+        console.log("Expected output for isVowel(a): true\n" + myFunctionTest(isVowel('a'), true));
 
-/* takes one array of and multiplys all the elements by 10*/
-function multiplyByTen(arr) {
-  return JSON.stringify(arr.map((elem,i,array)=>elem*10));
-}
+        console.log("Expected output for isVowel(c): false\n" + myFunctionTest(isVowel('c'), true));
 
-/* takes one array and filters it returning all the elements that are equal to 3*/
-function equalToThree(arr) {
-  return JSON.stringify(arr.filter((a)=>a === 3));
-}
+        console.log("Expected sum output for arr[2,2,3]: 6\n" + myFunctionTest(sum([2, 2, 3]), 7));
+        console.log("Expected sum output for arr[2,2,3]: 6\n" + myFunctionTest(sum([2, 2, 3]), 3));
 
-/* takes one array and returns the whole product number of all elements*/
-function returnTheProduct(arr) {
-  return arr.reduce((a,b)=>a*b);
-}
+        console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(multiply([2, 2, 3]), 12));
+        console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(multiply([2, 2, 3]), 7));
 
-function filter(arr, filterFunc) {   
-  const filterArr = []; 
-  for(let i=0;i<arr.length;i++) {
-  const result = filterFunc(arr[i], i, arr);
-    if(result) {         
-      filterArr.push(arr[i]);
-    } 
-  }
-  return JSON.stringify(filterArr);
-}
+        console.log("Expected reverse result for Ahmed: demhA\n" + myFunctionTest(reverse("Ahmed"), "demhA"));
+        console.log("Expected reverse result for Ahmed: demhA\n" + myFunctionTest(reverse("Ahmed"), "dem"));
 
-function map(arr, mapFunc) {    
-  const mapArr = [];
-  for(let i=0;i<arr.length;i++) {
-    const result = mapFunc(arr[i], i, arr);        
-    mapArr.push(result);    
-  }    
-  return JSON.stringify(mapArr);
-}
+        console.log("Expected longest word inside ['bird','dog','monkey']: monkey with 6 chars\n" + myFunctionTest(findLongestWord(['bird', 'dog', 'monkey']), 6));
+        console.log("Expected longest word inside ['bird','dog','monkey']: monkey\n" + myFunctionTest(findLongestWord(['bird', 'dog', 'monkey']), 4));
 
-console.log("My Filter Function: " + myFunctionTest(filter([5,1,3,2,6], num => num % 2 === 0), JSON.stringify([2,6])));
+        console.log("Expected word length greater than 3 inside ['bird','dog','monkey']: ['bird','monkey']\n" + myFunctionTest(filterLongWords(['bird', 'dog', 'monkey'], 3), JSON.stringify(['bird', 'monkey'])));
+        console.log("Expected word length greater than 3 inside ['bird','dog','monkey']: ['bird','monkey']\n" + myFunctionTest(filterLongWords(['bird', 'dog', 'monkey'], 3), JSON.stringify(['aaa', 'bbb'])));
 
-console.log("My Filter Function: " + myFunctionTest(map([2,4,5], num => num * 2), JSON.stringify([4,8,10])));
+        console.log("Expected a new array thay each of its element is multiplied by 10 arr[2,2,3]: [20,20,30]\n" + myFunctionTest(multiplyByTen([2, 2, 3]), JSON.stringify([20, 20, 30])));
+        console.log("Expected a new array thay each of its element is multiplied by 10 arr[2,2,3]: [20,20,30]\n" + myFunctionTest(multiplyByTen([2, 2, 3]), JSON.stringify([12, 20, 30])));
 
-console.log("My Filter Function: " + myFunctionTest(filter([5,1,3,2,6], num => num % 2 === 0), JSON.stringify([2,1])));
+        console.log("Expected a new array thay each of its element is will be filtered and will equal to three arr[2,2,3,3]: [3,3]\n" + myFunctionTest(equalToThree([2, 2, 3, 3]), JSON.stringify([3, 3])));
+        console.log("Expected a new array thay each of its element is will be filtered and will equal to three arr[2,2,3,3]: [3,3]\n" + myFunctionTest(equalToThree([2, 2, 3, 3]), JSON.stringify([2, 3])));
 
-console.log("My Filter Function: " + myFunctionTest(map([2,4,5], num => num * 2), JSON.stringify([4,8,8])));
-
-console.log("Expected output of max(20,10) is 20  " + myFunctionTest(20, max(20, 10)));
-
-console.log("Expected output of maxOfThree(5,4,44) is 44  " + myFunctionTest(44, maxOfThree(5, 4, 44)));
-
-console.log("Expected output of maxOfThree(55,4,44) is 55  " + myFunctionTest(55, maxOfThree(55, 4, 44)));
-
-console.log("Expected output of maxOfThree(55,4,44) is 55  " + myFunctionTest(4, maxOfThree(55, 4, 44)));
-
-console.log("Expected output for isVowel(a): true\n" + myFunctionTest(isVowel('a'),true));
-
-console.log("Expected output for isVowel(c): false\n" + myFunctionTest(isVowel('c'), true));
-
-console.log("Expected sum output for arr[2,2,3]: 6\n" + myFunctionTest(sum([2,2,3]), 7));
-console.log("Expected sum output for arr[2,2,3]: 6\n" + myFunctionTest(sum([2,2,3]), 3));
-
-console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(multiply([2,2,3]), 12));
-console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(multiply([2,2,3]), 7));
-
-console.log("Expected reverse result for Ahmed: demhA\n" + myFunctionTest(reverse("Ahmed"), "demhA"));
-console.log("Expected reverse result for Ahmed: demhA\n" + myFunctionTest(reverse("Ahmed"), "dem"));
-
-console.log("Expected longest word inside ['bird','dog','monkey']: monkey with 6 chars\n" + myFunctionTest(findLongestWord(['bird','dog','monkey']), 6));
-console.log("Expected longest word inside ['bird','dog','monkey']: monkey\n" + myFunctionTest(findLongestWord(['bird','dog','monkey']), 4));
-
-console.log("Expected word length greater than 3 inside ['bird','dog','monkey']: ['bird','monkey']\n" + myFunctionTest(filterLongWords(['bird','dog','monkey'],3), JSON.stringify(['bird','monkey'])));
-console.log("Expected word length greater than 3 inside ['bird','dog','monkey']: ['bird','monkey']\n" + myFunctionTest(filterLongWords(['bird','dog','monkey'],3), JSON.stringify(['aaa','bbb'])));
-
-console.log("Expected a new array thay each of its element is multiplied by 10 arr[2,2,3]: [20,20,30]\n" + myFunctionTest(multiplyByTen([2,2,3]), JSON.stringify([20,20,30])));
-console.log("Expected a new array thay each of its element is multiplied by 10 arr[2,2,3]: [20,20,30]\n" + myFunctionTest(multiplyByTen([2,2,3]), JSON.stringify([12,20,30])));
-
-console.log("Expected a new array thay each of its element is will be filtered and will equal to three arr[2,2,3,3]: [3,3]\n" + myFunctionTest(equalToThree([2,2,3,3]), JSON.stringify([3,3])));
-console.log("Expected a new array thay each of its element is will be filtered and will equal to three arr[2,2,3,3]: [3,3]\n" + myFunctionTest(equalToThree([2,2,3,3]), JSON.stringify([2,3])));
-
-console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(returnTheProduct([2,2,3]), 12));
-console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(returnTheProduct([2,2,3]), 7));
+        console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(returnTheProduct([2, 2, 3]), 12));
+        console.log("Expected multiply output for arr[2,2,3]: 12\n" + myFunctionTest(returnTheProduct([2, 2, 3]), 7));
 
 
-</script>
+    </script>
 </head>
-<body>
-<!-- the element with id="mocha" will contain test results -->
-<div id="mocha"></div>
-<p>Each task contains a <strong>Success</strong> and <strong>Fail</strong> test case.</p>
-<p>I also included <strong>Console</strong>.<strong>Assert</strong> for each test case.</p>
-<p>Look in the Chrome developer console to see the output. CTRL_SHIFT_J</p>
 
-<script>
-mocha.run();
-</script>
+<body>
+    <!-- the element with id="mocha" will contain test results -->
+    <div id="mocha"></div>
+    <p>Each task contains a <strong>Success</strong> and <strong>Fail</strong> test case.</p>
+    <p>I also included <strong>Console</strong>.<strong>Assert</strong> for each test case.</p>
+    <p>Look in the Chrome developer console to see the output. CTRL_SHIFT_J</p>
+
+    <script>
+        mocha.run();
+    </script>
 </body>
+
 </html>
