--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
                             <a href="/Lesson 5 Basic JavaScript (Week 3)"><li>Lesson 5: Basic JavaScript (Week 3)</li></a>
                             <a href="/Lesson 6 Scope, closures and encapsulation/"><li>Lesson 6: Scope, closures and encapsulation</li></a>
                             <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
-                        </ul>
+                            <a href="Lesson DOM, jQuery (Maze)"><li>Lesson: DOM, jQuery (Maze)</li></a>
+
+
+
+					   </ul>
 
                     </div>
                 </div>
