--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
         </div>
 
     </section>
-
-
-    <section class="container">
-
+	
+  
+  
+    <section class="container"><div> </br> </div>
         <div class="row">
-
             <div class="col-md-6 col-sm-12">
                 <div class="about">
-                    <h2 class="white">Assignments</h2>
+                  <h2 >Assignments</h2>
                     <div class="about-content">
                         <ul>
                             <li>Lesson 1: HTML and CSS (Week 1)</li>
@@ -66,7 +65,7 @@
                             <a href="/Lesson 5 Basic JavaScript (Week 3)"><li>Lesson 5: Basic JavaScript (Week 3)</li></a>
                             <a href="/Lesson 6 Scope, closures and encapsulation/"><li>Lesson 6: Scope, closures and encapsulation</li></a>
                             <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
-                            <a href="Lesson DOM, jQuery (Maze)"><li>Lesson: DOM, jQuery (Maze)</li></a>
+                            <a href="/Lesson DOM, jQuery (Maze)"><li>Lesson: DOM, jQuery (Maze)</li></a>
 
 
 
