--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="about">
                   <h2 >Assignments</h2>
                     <div class="about-content">
-                        <ul>
-                            <li>Lesson 1: HTML and CSS (Week 1)</li>
+                        <ul> 
+							 <a href="https://ahmad-noor.github.io/"><li>Lesson 1: HTML and CSS (Week 1)</li></a>
                              <li><div>Lesson 2: Basic CSS Styling (<a href="/Lesson 2 Basic CSS Styling (Week 1)/Aboutme.html">Lab 02</a> , <a href="https://ahmad-noor.github.io/Lesson 2 Basic CSS Styling (Week 1)/Recipe.html">Recipes</a>)</div></li>
                             <a href="#"> <li>Lesson 3: CSS Practice (Week 2)</li></a>
                             <a href=" https://ahmad-noor.github.io/Lesson 3b CSS Layout--Movie Review"><li>Lesson 3b: CSS Layout--Movie Review</li></a>
