--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                             <a href="/Lesson 6 Scope, closures and encapsulation/"><li>Lesson 6: Scope, closures and encapsulation</li></a>
                             <a href="Lesson 7 (Objects, Modules, Inheritance) ASCII Animation/ascii.html"><li>Lesson 7: (Objects, Modules, Inheritance) ASCII Animation</li></a>
                             <a href="/Lesson DOM, jQuery (Maze)"><li>Lesson: DOM, jQuery (Maze)</li></a>
+							   <a href="/Lesson jQuery (Task Tracker project and jQuery)/w2d4taskTracker.html"><li>Lesson jQuery (Task Tracker project and jQuery)</li></a>
+                           <a href="/Lesson Events (Clean Screen)/clearScreen.html"><li>Lesson Events (Clean Screen)</li></a>
 
 
 
