--- a/Lesson Events (Clean Screen)/clearScreen.html
+++ b/Lesson Events (Clean Screen)/clearScreen.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Clear Screen</title>
-    <link href="clearscreen.css" type="text/css" rel="stylesheet">
+    <link href="./clearscreen.css" type="text/css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="clearscreen.js"></script>
+    <script src="./clearscreen.js"></script>
 </head>
 <body>
     <div id="circles"></div>
@@ -27,7 +27,7 @@
             <input type="number" id="number-circles" value="5" />
         </div>
         <nav>
-            <a href="#" id="start">Start</a>
+            <input id="start" type="button" value="Start">
         </nav>
     </form>
 </body>
