--- a/Lesson Events (Clean Screen)/clearScreen.html
+++ b/Lesson Events (Clean Screen)/clearScreen.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Clear Screen</title>
-    <link href="https://ahmad-noor.github.io/Lesson%20Events%20(Clean%20Screen)/clearScreen.css" type="text/css" rel="stylesheet">
+    <link href="clearScreen.css" type="text/css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="https://ahmad-noor.github.io/Lesson%20Events%20(Clean%20Screen)/clearscreen.js"></script>
+    <script src="clearscreen.js"></script>
 </head>
 <body>
     <div id="circles"></div>
