--- a/Lesson Events (Clean Screen)/clearScreen.html
+++ b/Lesson Events (Clean Screen)/clearScreen.html
@@ -31,6 +31,6 @@
         </nav>
     </form>
 	
-	    <script src="clearscreen.js"></script>
+	    <script src="clearScreen.js"></script>
 </body>
 </html>
