--- a/Lesson Events (Clean Screen)/clearScreen.html
+++ b/Lesson Events (Clean Screen)/clearScreen.html
@@ -30,8 +30,8 @@
             <input id="start" type="button" value="Start">
         </nav>
     </form>
-	
-	    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	    <script src="clearScreen.js"></script>
 </body>
 </html>
