--- a/Lesson jQuery (Task Tracker project and jQuery)/w2d4taskTracker.html
+++ b/Lesson jQuery (Task Tracker project and jQuery)/w2d4taskTracker.html
@@ -6,11 +6,7 @@
       <link rel="stylesheet" type="text/css"
          href="styles/tasks.css"
          media="screen" />
-      <script src="scripts/jquery-2.0.3.js"></script>
-      <script src="scripts/jquery-tmpl.js"></script>
-      <script src="scripts/jquery-serialization.js"></script>
-      <script src="scripts/tasks-controller.js"></script>
-      <script src="scripts/jquery.validate.js"></script>
+
    </head>
    <body>
       <header>
@@ -73,6 +69,14 @@
          </section>
       </main>
       <footer>You have 3 tasks</footer>
+	  
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="scripts/jquery-tmpl.js"></script>
+      <script src="scripts/tasks-controller.js"></script>
+      <script src="scripts/jquery.validate.js"></script>
+      <script src="scripts/jquery-serialization.js"></script>
+	  
+	  
    </body>
    <script>
         $(document).ready(function() {
